--- a/css/styles.css
+++ b/css/styles.css
@@ -4,18 +4,22 @@
   --other-txt-color: #ffffff;
   --hero-txt-color: #FFFFFF;
   --footer-txt-color: rgba(255, 255, 255, 0.6);
-  --primary-bg-color: #F5F5F5;
+  
+  --primary-bg-color: #FFFFFF;
   --secondary-bg-color: #2F303A;
   --other-bg-color: #F5F4FA;
-  --header-bg-color: #FFFFFF;
+  
   --primary-bg-btn: #2196F3;
   --secondary-bg-btn: #188CE8;
   --other-bg-btn:#F5F4FA;
+  
   --primary-bg-btnworks: #F5F4FA;
   --secondary-bg-btnworks: #2196F3;
+  
   --primary-logo-color: #000000;
   --secondary-logo-color: #2196F3;
   --other-logo-color: #ffffff;
+  
   --primari-btn-text: #ffffff;
   --secondary-btn-text: #212121;
 }
@@ -25,7 +29,7 @@ body {
   color: var(--primary-txt-color);  
   background-color: var(--primary-bg-color);
   font-size: 14px;
-  line-height: 1.19;
+  line-height: 1.17;
   letter-spacing: 0.03em;
 }
 /* cancellation dot */
@@ -36,15 +40,12 @@ body {
 .items {
   text-decoration: none;
 }
-/* header color */
-.header {
-  background-color: var(--header-bg-color);
-}
 /* logo modificate */
 .logo {
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
+  line-height: 1.19;
   
   color: var(--primary-logo-color);
 }
@@ -72,10 +73,16 @@ body {
   color: var(--secondary-logo-color);
 }
 
-.nav-contacts {
+.nav-list .items.current {
+  color: var(--primary-bg-btn);
+}
+
+.nav-list .nav-contacts {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  
+  color: var(--primary-txt-color);
 }
 /* hero section */
 .hero,
@@ -99,6 +106,9 @@ body {
   font-weight: 700;
   font-size: 16px;
   letter-spacing: 0.06em;
+  line-height: 1.19;
+  
+  cursor: pointer;
   
   color: var(--primari-btn-text);
   background-color: var(--primary-bg-btn);
@@ -125,7 +135,6 @@ body {
 /* 2d section */
 .adv-title {
   font-size: 14px;
-  font-weight: 700;
   line-height: 1.14;
   
   color: var(--secondary-txt-color);
@@ -137,9 +146,7 @@ body {
 /* 3d section */
 .doing-title,
 .team-title {
-  font-weight: 700;
   font-size: 36px;
-  line-height: 1.17;
   text-align: center;
   
   color: var(--secondary-txt-color);
@@ -152,12 +159,14 @@ body {
 .team-name {
   font-weight: 500;
   font-size: 16px;
+  line-height: 1.19;
   
   color: var(--secondary-txt-color);
 }
 
 .team-prof {
   font-size: 16px;
+  line-height: 1.19;
 }
 /* footer */
 /* address modificate */
@@ -181,6 +190,9 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
+  letter-spacing: 0.03em;
+  
+  cursor: pointer;
   
   color: var(--secondary-btn-text);
   background-color: var(--primary-bg-btnworks);
@@ -193,7 +205,6 @@ body {
 }
 
 .work-name {
-  font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
