--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ body {
   font-weight: 700;
   font-size: 16px;
   letter-spacing: 0.06em;
-  line-height: 1.19;
+  line-height: 1.88;
   
   cursor: pointer;
   
@@ -154,6 +154,10 @@ body {
 /* 4 section */
 .team {
   background-color: var(--other-bg-color);
+}
+
+.team-item {
+  background-color: var(--primary-bg-color);
 }
 
 .team-name {
